Apagar localStorage e itens da lista

--- a/appListaDeTarefas/index.html
+++ b/appListaDeTarefas/index.html
@@ -21,7 +21,7 @@
                   <input type="text" name="tarefa" id="tarefa">
                   <label for="tarefa">Nova Tarefa</label>
                 </div>
-                <input type="submit" value="Add Task" class="btn">
+                <input type="submit" value="Add Task" class="btn adicionar">
               </form>
             </div>
           </div>
