--- a/graficos/ipca.html
+++ b/graficos/ipca.html
@@ -26,6 +26,6 @@
             </div>
         </div>
     </div>
-    <button class="button"></button>
+    <button class="button">IPCA</button>
 </body>
 </html>
